--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "react-router": "^6.22.2",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@wemake-services/eslint-config-javascript": "^2.1.1",
-    "eslint": "^8.57.0"
+    "eslint": "^8.57.0",
+    "gh-pages": "^6.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
